# deepagents-opensandbox-backend

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/deepagents_opensandbox/: __init__.py  _loop.py  backend.py
src/deepagents_opensandbox_backend/: __init__.py  backend.py
tests/integration_tests/: test_sandbox.py
