[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepagents-opensandbox-backend"
version = "0.1.0"
description = "Deep Agents sandbox backend for a locally-run OpenSandbox server"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hmzbo" }]
keywords = ["deepagents", "langchain", "langgraph", "opensandbox", "sandbox", "agents"]
dependencies = [
    "deepagents>=0.2.0",
    "opensandbox>=0.1.13",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "langchain-tests",
]

[project.urls]
Homepage = "https://github.com/Hmzbo/deepagents-opensandbox-backend"
Repository = "https://github.com/Hmzbo/deepagents-opensandbox-backend"

[tool.hatch.build.targets.wheel]
packages = ["src/deepagents_opensandbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
